# kadas-albireo

./: CMakeLists.txt  README.md
cmake/: FindOSGEARTH.cmake  FindPyQt.cmake  FindPyQt4.cmake  FindPyQt5.py  FindPythonLibrary.cmake  FindQScintilla.cmake  FindQsci.cmake  FindQuaZip.cmake  FindQwt.cmake  FindSIP.cmake  FindSIP.py  PyQt4Macros.cmake  PyQtMacros.cmake
cmake/modules/: ECMQt4To5Porting.cmake
cmake_templates/: qgsconfig.h.in
doc/: TRANSLATORS
docker/mingw-buildenv/: Dockerfile  README.md  mingw64-librsvg2-2.40.11-1.fc28.noarch.rpm
i18n/: CMakeLists.txt  qgis_ar.ts  qgis_bs.ts  qgis_ca.ts  qgis_cs.ts  qgis_da.ts  qgis_de.ts  qgis_el.ts  qgis_en.ts  qgis_es.ts  qgis_et.ts  qgis_eu.ts  qgis_fa.ts  qgis_fi.ts  qgis_fr.ts  qgis_gl.ts  qgis_hi.ts  qgis_hr.ts  qgis_hu.ts  qgis_id.ts  qgis_is.ts  qgis_it.ts  qgis_ja.ts  qgis_km.ts  qgis_ko.ts  qgis_lt.ts  qgis_lv.ts  qgis_mn.ts  qgis_nb.ts  qgis_nl.ts  qgis_pl.ts  qgis_pt_BR.ts  qgis_pt_PT.ts  qgis_ro.ts  qgis_ru.ts  qgis_sk.ts  qgis_sl.ts  qgis_sr.ts  qgis_sr@latin.ts  qgis_sv.ts  (+7 more)
images/: CMakeLists.txt  images.qrc  qgskadasstyle.css
images/kadas/: Funktionen und benФtigte Icons.xlsx
ms-windows/: mingwbuild.sh  qgis-enterprise_15.nsi
ms-windows/osgeo4w/: package.cmd  postinstall-common.bat  postinstall-desktop.bat  postinstall-dev.bat  postinstall-grass.bat  preremove-grass.bat  qgis-build.md  qgis-grass.bat.tmpl  qgis.bat.tmpl
python/: CMakeLists.txt  __init__.py  utils.py
python/analysis/: analysis.sip
python/console/: console.py  console_editor.py  console_output.py  console_settings.py
python/core/: conversions.sip  core.sip  qgis.sip  qgscoordinateformat.sip  qgscoordinatereferencesystem.sip  qgscoordinatetransform.sip  qgscredentials.sip  qgscrscache.sip  qgsdataprovider.sip  qgsdistancearea.sip  qgsfeature.sip  qgsfeaturestore.sip  qgsfeedback.sip  qgsgeometry.sip  qgslegendsettings.sip  qgsmaplayer.sip  qgsmaplayerregistry.sip  qgsmapsettings.sip  qgsmimedatautils.sip  qgsnetworkaccessmanager.sip  qgsowsconnection.sip  qgspallabeling.sip  qgspluginlayer.sip  qgspluginlayerregistry.sip  qgspoint.sip  qgsproject.sip  qgsrectangle.sip  qgsredlininglayer.sip  qgsrendercontext.sip  qgsscalecalculator.sip  qgsvectorlayer.sip  (+1 more)
resources/: CMakeLists.txt  qgskadasstyle.css  qgsribbonstyle.css
scripts/: tsstat.pl  update_ts.sh  update_ts_files.sh
src/: CMakeLists.txt
src/app/: main.cpp  (+157 more)
src/plugins/coordinate_display/: CMakeLists.txt  coordinatedisplay.qrc  coordinatedisplay_plugin.h  qgscoordinateconverter.cpp  qgscoordinateconverter.h  qgscoordinatedisplay.cpp  qgscoordinatedisplay.h
src/plugins/crash/: CMakeLists.txt  crash.qrc  crash_plugin.h
src/plugins/iam_auth/: CMakeLists.txt  iamauth_plugin.h  qgsiamauth.cpp  qgsiamauth.h  qgsiamauth.qrc  webaxwidget.h
src/plugins/milx/: CMakeLists.txt  MilXClient.cpp  MilXClient.hpp  MilXCommands.hpp  milx_plugin.h  qgsmilxannotationitem.cpp  qgsmilxannotationitem.h  qgsmilxio.cpp  qgsmilxio.h  qgsmilxlayer.cpp  qgsmilxlayer.h  qgsmilxlibrary.cpp  qgsmilxlibrary.h  qgsmilxmaptools.cpp  qgsmilxmaptools.h  qgsmilxplugin.cpp  qgsmilxplugin.h  qgsmilxplugin.qrc  qgsmilxutils.cpp  qgsmilxutils.h
src/plugins/milx/python/: CMakeLists.txt  __init__.py  milx.sip  qgsmilxlayer.sip
src/plugins/vbs_functionality/: CMakeLists.txt  qgsvbscoordinateconverter.cpp  qgsvbscoordinateconverter.h  qgsvbscoordinatedisplayer.cpp  qgsvbscoordinatedisplayer.h  qgsvbscrashhandler.cpp  qgsvbscrashhandler.h  qgsvbscrsselection.cpp  qgsvbscrsselection.h  qgsvbsfunctionality.cpp  qgsvbsfunctionality.h  qgsvbsfunctionality.qrc  vbsfunctionality_plugin.h
src/plugins/vbs_functionality/analysistools/: qgsvbshillshadetool.cpp  qgsvbshillshadetool.h  qgsvbsslopetool.cpp  qgsvbsslopetool.h  qgsvbsviewshedtool.cpp  qgsvbsviewshedtool.h
src/plugins/vbs_functionality/maptools/: qgsvbsmaptoolpinannotation.cpp  qgsvbsmaptoolpinannotation.h  qgsvbspinannotationitem.cpp  qgsvbspinannotationitem.h
src/plugins/vbs_functionality/milix/: qgsvbsmaptoolmilix.cpp  qgsvbsmaptoolmilix.h  qgsvbsmilixannotationitem.cpp  qgsvbsmilixannotationitem.h  qgsvbsmilixio.cpp  qgsvbsmilixio.h  qgsvbsmilixlayer.cpp  qgsvbsmilixlayer.h  qgsvbsmilixlibrary.cpp  qgsvbsmilixlibrary.h  qgsvbsmilixmanager.cpp  qgsvbsmilixmanager.h
src/plugins/vbs_functionality/milix/Client/: CMakeLists.txt  VBSMilixClient.cpp  VBSMilixClient.hpp
src/plugins/vbs_functionality/milix/Server/: CMakeLists.txt  VBSMilixCommands.hpp  VBSMilixServer.cpp  VBSMilixServer.hpp
src/plugins/vbs_functionality/multimap/: qgsvbsmapwidget.cpp  qgsvbsmapwidget.h  qgsvbsmultimapmanager.cpp  qgsvbsmultimapmanager.h
src/plugins/vbs_functionality/ovl/: qgsvbsovlimporter.cpp  qgsvbsovlimporter.h
src/plugins/vbs_functionality/pinannotation/: qgsvbsmaptoolpinannotation.cpp  qgsvbsmaptoolpinannotation.h  qgsvbspinannotationitem.cpp
src/plugins/vbs_functionality/python/: CMakeLists.txt  __init__.py  qgsvbsmilixlayer.sip  vbs.sip
src/plugins/vbs_functionality/search/: CMakeLists.txt  qgsvbscoordinatesearchprovider.cpp  qgsvbscoordinatesearchprovider.h  qgsvbslocaldatasearchprovider.cpp  qgsvbslocaldatasearchprovider.h  qgsvbslocationsearchprovider.cpp  qgsvbslocationsearchprovider.h  qgsvbslocsearchprovider.cpp  qgsvbsremotedatasearchprovider.cpp  qgsvbsremotedatasearchprovider.h  qgsvbssearchbox.cpp  qgsvbssearchbox.h  qgsvbssearchprovider.h  qgsvbsworldlocationsearchprovider.cpp  qgsvbsworldlocationsearchprovider.h
src/plugins/vbs_functionality/utils/: qgsvbslltoutm.cpp  qgsvbslltoutm.h  qgsvbsspinner.cpp  qgsvbsspinner.h  smtp.cpp  smtp.h
src/splash/: CMakeLists.txt  makecpp.php  splash.cpp  splash.xcf  splash.xpm
src/splash/allianz/: CMakeLists.txt  splash.cpp  splash.xpm
src/splash/community/: CMakeLists.txt  splash.cpp  splash.xpm
src/splash/gbd/: CMakeLists.txt  splash.cpp  splash.xpm
src/splash/geogl/: CMakeLists.txt  splash.cpp  splash.xpm
src/splash/sogis/: CMakeLists.txt  splash.cpp  splash.xpm
src/splash/sourcepole/: CMakeLists.txt  splash.cpp  splash.xpm
src/splash/trial/: CMakeLists.txt  splash.cpp  splash.xpm
(+873 files in other folders)
